# tribe

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
data/: create_tables.sql  db_models.cpp  db_models.h  db_models.hpp  db_sessions.cpp  db_sessions.h  generate_sql.py  tables_schema.sql
